--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
   build_dev:
     if: ${{ inputs.envParam == 'dev' }}
     runs-on: ubuntu-latest
+    environment: 
+      name: dev
     env:
       User: ${{ secrets.USER }}
     steps:
@@ -26,6 +28,8 @@ jobs:
   build_prod:
     if: ${{ inputs.envParam == 'prd' }}
     runs-on: ubuntu-latest
+    environment: 
+      name: prd
     env:
        User: ${{ secrets.USER }}
     steps:
