--- a/.github/workflows/buildWithIfs.yml
+++ b/.github/workflows/buildWithIfs.yml
@@ -12,29 +12,13 @@ on:
         required: true
 
 jobs:
-  build_dev:
-    if: ${{ inputs.envParam == 'dev' }}
+  build:
     runs-on: ubuntu-latest
-    environment: 
-      name: dev
+    environment:
+      name: inputs.envParam
     env:
       User: ${{ secrets.USER }}
       location: ${{ vars.LOCATION }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run a multi-line script
-        run: |
-          echo ${{ env.User }}
-          echo ${{ vars.LOCATION }}
-
-  build_prod:
-    if: ${{ inputs.envParam == 'prd' }}
-    runs-on: ubuntu-latest
-    environment: 
-      name: prd
-    env:
-       User: ${{ secrets.USER }}
-       location: ${{ vars.LOCATION }}
     steps:
       - uses: actions/checkout@v4
       - name: Run a multi-line script
