--- a/.github/workflows/buildWithIfs.yml
+++ b/.github/workflows/buildWithIfs.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment:
-      name: inputs.envParam
+      name: ${{ inputs.envParam }}
     env:
       User: ${{ secrets.USER }}
       location: ${{ vars.LOCATION }}
