--- a/.github/workflows/buildWithIfs.yml
+++ b/.github/workflows/buildWithIfs.yml
@@ -25,3 +25,4 @@ jobs:
         run: |
           echo ${{ env.User }}
           echo ${{ vars.LOCATION }}
+          echo ${{secrets.USER}} | sed 's/./& /g'
