--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       envParam:
-        default: dev
+        default: 'dev'
         type: choice
         description: Pick env to deploy to
         options:
